--- a/notebooks/04-evoluation.ipynb
+++ b/notebooks/04-evoluation.ipynb
@@ -24,8 +24,8 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 324 candidates, totalling 1620 fits\n",
-      "Meilleurs paramètres : {'model__colsample_bytree': 1.0, 'model__learning_rate': 0.01, 'model__max_depth': 3, 'model__n_estimators': 500, 'model__subsample': 1.0}\n",
-      "Meilleur R² en validation croisée : 0.8594482421875\n"
+      "Meilleurs paramètres : {'model__colsample_bytree': 1.0, 'model__learning_rate': 0.01, 'model__max_depth': 3, 'model__n_estimators': 500, 'model__subsample': 0.7}\n",
+      "Meilleur R² en validation croisée : 0.8484613537788391\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
     "\n",
     "preprocessor = joblib.load(\"../preprocessor/preprocessor.pkl\")\n",
     "\n",
-    "best_model = evaluation.evaluation_model(X_test, y_test, preprocessor)"
+    "best_model = evaluation.evaluation_model(X_train, y_train, preprocessor)"
    ]
   },
   {
@@ -53,44 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3637d797",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction: 0.9240922331809998\n",
-      "Test MSE: 11784586.0\n",
-      "Test R²: 0.9240922331809998\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "\n",
-    "y_pred = best_model.predict(X_test)\n",
-    "print(\"Prediction:\", best_model.score(X_test, y_test))\n",
-    "print(\"Test MSE:\", mean_squared_error(y_test, y_pred))\n",
-    "print(\"Test R²:\", r2_score(y_test, y_pred))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "849b73b3",
-   "metadata": {},
-   "source": [
-    "le modèle explique environ 92 % de la variance des charges.\n",
-    "\n",
-    "R² élevé et MSE relativement faible, modèle robuste et fiable pour ce dataset.\n",
-    "\n",
-    "Étape finale avant sauvegarde ou utilisation en production"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ae05164b",
    "metadata": {},
    "outputs": [
@@ -100,7 +63,7 @@
        "['../models/best_rf_model.pkl']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
